# snb-vision

./: .gitignore  CMakeLists.txt
data/conf/: sdk_example.ini
data/ultra_face_models/: RFB-320.ini
src/: CMakeLists.txt  main.cpp
src/cmake/: install.cmake
src/duer_service/: duerVisionServiceManager.cpp  duerVisionServiceManager.h  duer_face_predict_service.cpp  duer_face_predict_service.h  duer_vision.h  duer_vision_service_manager.cpp  duer_vision_service_manager.h
src/kernel/: CMakeLists.txt  UltraFace.cpp  UltraFace.h
src/kernel/utils/: CMakeLists.txt  color_space.cpp  error.h  image_loader.cpp  snowboy_logging.cpp  snowboy_logging.h
src/kernel_bin/: CMakeLists.txt  UltraFace_test.cpp  image_loader.cpp  image_loader.h  image_loader_test.cpp
src/kernel_singleton/: ultra_face_singleton.cpp  ultra_face_singleton.h
src/utils/: CMakeLists.txt  color_space.h
tools/: README.md
tools/libjpeg/: CMakeLists.txt
